--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.12",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multiparty": "^4.2.1"
   }
 }
